<resources>
    <string name="app_name" translatable="false">eSkin</string>
    <string name="medication">Medication</string>
    <string name="overview_medication">Overview Medication</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="scan" translatable="false">Scan</string>
    <string name="label">Enter company name</string>
    <string name="title">Enter medication name</string>
    <string name="dosage">Dosage</string>
    <string name="intake">Intake</string>
    <string name="wunddokumentation">Wound documentation</string>
    <string name="calendar">Calendar</string>
    <string name="language">Language</string>
    <string name="description">Description</string>
    <string name="willkommen_bei_eskin">Welcome to eSkin</string>
    <string name="start" translatable="false">Start</string>
    <string name="update_data">Update Data</string>
    <string name="enter_topic_name">Enter topic name</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_language">Enter language</string>
    <string name="update" translatable="false">Update</string>
    <string name="upload_data">Upload Data</string>
    <string name="save">Save</string>
    <string name="loading">Loading...</string>
    <string name="event">Event</string>
    <string name="ganztaegig">All-day</string>
    <string name="no_date_found">No Date found</string>
    <string name="medication_delete">Medication cleared\n</string>
    <string name="error_deleting_medication">Error deleting medication</string>
    <string name="pick_image_first">Pick image first</string>
    <string name="no_image_selected">No image selected</string>
    <string name="medication_saved_successfully">Medication saved successfully</string>
    <string name="error_saving_medication">Error saving medication</string>
    <string name="fill_out_field"><![CDATA[Please fill out label, title & at least one intake time]]></string>
</resources>