<!-- list_item_layout.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/labelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_below="@id/labelTextView"
        android:layout_marginStart="20dp" />

    <!--<TextView
        android:id="@+id/dosageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dosage"
        android:layout_below="@id/titleTextView"
        android:layout_marginStart="20dp" />-->

    <TextView
        android:id="@+id/usageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intake"
        android:layout_below="@id/titleTextView"
        android:layout_marginStart="20dp" />

    <!-- Hier fügen Sie den "Löschen"-Button hinzu -->
    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/app_name"
        android:onClick="onDeleteButtonClick"
        android:src="@drawable/ic_delete"
        tools:ignore="TouchTargetSizeCheck" />
</RelativeLayout>
