<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Christiane.UploadActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/lavendar_border"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/datumAnzeige"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_date_found"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/uploadEvent"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/lavendar_border"
                android:gravity="start|center_vertical"
                android:hint="@string/event"
                android:padding="16dp"
                android:textColor="@color/lavender" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <Switch
                    android:id="@+id/daySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:paddingStart="20dp"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:text="@string/ganztaegig" />
                <!-- TimePicker for time input -->
                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lavender"
                    android:timePickerMode="spinner" />

                <!-- Switch for day option -->

            </LinearLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/save"
                android:textSize="18sp"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
