<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Verena.UploadActivity">

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_marginEnd="5dp"
      android:layout_marginStart="5dp"
      app:cardCornerRadius="30dp"
      app:cardElevation="20dp"
      android:layout_alignParentTop="true"
      android:layout_alignParentBottom="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/lavendar_border"
        android:orientation="vertical"
        android:layout_weight="1">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/upload_data"
          android:textSize="30sp"
          android:textAlignment="center"
          android:layout_marginTop="20dp"
          android:textColor="@color/lavender"/>

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:src="@drawable/uploadimg"
          android:id="@+id/uploadImage"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="20dp"
          android:layout_marginStart="20dp"
          android:scaleType="fitXY"/>

    <!--  <EditText
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:id="@+id/uploadTopic"
          android:background="@drawable/lavender_border"
          android:layout_marginTop="20dp"
          android:padding="16dp"
          android:hint="@string/enter_topic_name"
          android:gravity="start|center_vertical"
          android:textColor="@color/lavender"/> -->

        <Spinner
            android:id="@+id/uploadTopic"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/lavender_border"
            android:padding="16dp"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
             />

      <EditText
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:id="@+id/uploadDesc"
          android:background="@drawable/lavender_border"
          android:layout_marginTop="20dp"
          android:padding="16dp"
          android:hint="@string/enter_description"
          android:gravity="start|center_vertical"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textColor="@color/black"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:id="@+id/uploadLang"
          android:background="@drawable/lavender_border"
          android:layout_marginTop="20dp"
          android:padding="16dp"
          android:hint="@string/enter_language"
          android:gravity="start|center_vertical"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textColor="@color/black"/>

      <Button
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:text="@string/save"
          android:id="@+id/saveButton"
          android:textSize="18sp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:backgroundTint="@color/lavender"
          android:layout_marginTop="20dp"
          app:cornerRadius = "20dp"/>

    </LinearLayout>

  </androidx.cardview.widget.CardView>

</RelativeLayout>