<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".Sophia.Medication">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/myImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar"
                android:layout_above="@id/textView_ÜbersMedikamente"
                android:src="@drawable/medikation"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/textView_Medikamente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:text="@string/medication"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />




            <TextView
                android:id="@+id/textView_ÜbersMedikamente"
                android:text="@string/overview_medication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_Medikamente"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp" />

            <ListView
                android:id="@+id/medicationListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textView_ÜbersMedikamente"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="19dp"
                android:backgroundTint="@color/lavender"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_add_24"
                app:tint="@color/white"
                tools:ignore="DuplicateClickableBoundsCheck" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="19dp"
                android:backgroundTint="@color/lavender"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_add_24"
                app:tint="@color/white" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start">

        <include
            layout="@layout/nav_drawer"/>

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>